--- a/templates/home.html
+++ b/templates/home.html
@@ -12,9 +12,19 @@
 
 <body>
     <div class="container">
-    <h1 class="text-center">Job openings</h1>
+    <h1 class="text-center mt-2 mb-4">Job openings</h1>
 
     <img class="img-fluid" id="banner" src="https://d495e86a-a479-4821-9a18-aab5fa725b49-00-3tqe22ox4gvt1.sisko.replit.dev/static/ican.jpg" height="90">
+    <h2 class="text-center mt-2 mb-4">About Saibas</h2>  
+      <p class = "lead">
+      We are a foundation that provides job openings for people who want to work in the field of Education.  We are looking for people who are willing to learn and grow. 
+      </p>
+      <h2 class="text-center mt-2 mb-4">Open positions</h2>
+      <div class="text-center">
+        <button class="btn btn-primary btn-lg">Contact us</button>
+        <p class="mt-4">Copyright 2024, Saibas</p>
+      </div>
+
     </div>  
 </body>
   
