--- a/templates/home.html
+++ b/templates/home.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+  {% include 'navbar.html' %}
     <div class="container">
     <h1 class="text-center mt-2 mb-4">Job openings</h1>
 
