add href mailto

--- a/templates/home.html
+++ b/templates/home.html
@@ -27,11 +27,12 @@
         {% endfor %}  
       </div>
       <div class="text-center">
-        <button class="btn btn-primary btn-lg mt-2" >Contact us</button>
-        <p class="mt-4">Copyright 2024, Saibas</p>
+        <a target="_blank" href="mailto:arieabisha@gmail.com?subject=Question&body=Question%3A%20%3Ctype%20your%20question%3E%0D%0ALink%3A%20%3Cpaste%20web%20link%20%2F%20if%20any%3E%0D%0AFile%3A%20%3Cpaste%20file%20link%20%2F%20if%20any%3E" button class="btn btn-primary btn-lg mt-2" >Contact us</a>
+        <p class="mt-4"></p>
       </div>
 
     </div>  
+  {% include 'footer.html' %}
 </body>
   
 
