--- a/templates/careerlist.html
+++ b/templates/careerlist.html
@@ -17,7 +17,7 @@
   </div>
   
   <div class="col-3">
-    <button type="button" class="btn btn-outline-primary">Apply</button>
+    <a  target="_blank" href="mailto:arieabisha@gmail.com?subject=Job%20application for20%{{job['title']}} &body=My%20name%3A%20%3Cyour%20name%3E%0D%0AMy%20resume%3A%20%3Clink%20to%20your%20resume%3E%0D%0AMy%20Linkedin%20profile%3A%20%3Cyour%20linkedin%20link%3E%0D%0AMy%20social%20media%3A%20%3Cyour%20social%20media%20link%3E" type="button" class="btn btn-outline-primary">Apply</a>
   </div>
 
 </div>
