--- a/templates/home.html
+++ b/templates/home.html
@@ -4,18 +4,15 @@
 
 <head>
     <title>Saibas job openings</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+  {% include 'bootstrap.html' %}
 
 </head>
 
 <body>
-  {% include 'navbar.html' %}
+    {% include 'navbar.html' %}
     <div class="container">
     <h1 class="text-center mt-2 mb-4">Job openings</h1>
-
-    <img class="img-fluid" id="banner" src="https://d495e86a-a479-4821-9a18-aab5fa725b49-00-3tqe22ox4gvt1.sisko.replit.dev/static/ican.jpg" height="90">
+    {% include 'banner.html' %}
     <h2 class="text-center mt-2 mb-4">About {{company_name}}</h2>  
       <p class = "lead">
       We are a foundation that provides job openings for people who want to work in the field of Education.  We are looking for people who are willing to learn and grow. 
