--- a/templates/studentlist.html
+++ b/templates/studentlist.html
@@ -8,4 +8,6 @@
     {% endif %}
   </td>
   <td>{{student['dob']}}</td>
+  <td align="center"><a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#modaledit">Ubah data</a></td>
+  <td align="center"><a href="" class="btn btn-danger btn-xs" onclick="return confirm('Apakah anda yakin ingin menghapus data ini?')">Hapus data</a></td>
 </tr>
