--- a/templates/studentadd.html
+++ b/templates/studentadd.html
@@ -21,23 +21,23 @@
 
           <div class="form-group">
             <label>Nama Tengah</t></label>
-            <input type="text" name="mname" class="form-control" required="1">
+            <input type="text" name="mname" class="form-control">
           </div>
 
             <div class="form-group"> 
               <label>Nama Belakang</label>
-              <input type="text" name="lname" class="form-control" required="1">
+              <input type="text" name="lname" class="form-control">
             </div>
 
           <div class="form-group"> 
             <label>Laki/Perempuan</label>
-            <input type="text" name="sex" class="form-control" required="1">
+            <input type="text" name="sex" class="form-control">
           </div>
 
           
             <div class="form-group">
               <label>Tanggal Lahir</label>
-              <input type="date" name="dob" class="form-control" required="1">
+              <input type="date" name="dob" class="form-control">
             </div>
 
             <div class="form-group">
