--- a/templates/studentedit.html
+++ b/templates/studentedit.html
@@ -1,9 +1,9 @@
-<div id="studentedit" class="modal fade" role="dialog">
+<div id="studentedit{{student.id}}"" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
 
       <div class="modal-header">
-        <h4 class="modal-title">Tambah Murid</h4>
+        <h4 class="modal-title">Ubah Data Murid</h4>
       </div>
 
       <div class="modal-body">
@@ -12,36 +12,36 @@
           <div class="form-group">
             <label>ID</label>
             <input type="hidden" name= "id" value="{{student.id}}">
-            <input type="text" class="form-control" name="id" value="" readonly>"
+            <input type="text" class="form-control" name="id" value="{{student.id}}" readonly>
           </div>
           
           <div class="form-group">
             <label>Kode Murid</label>
-            <input type="text" name="stdid" class="form-control" required="1" value="1">
+            <input type="text" name="stdid" class="form-control" required="1" value="{{student.stdid}}">
           </div>
 
           <div class="form-group">
             <label>Nama Depan</label>
-            <input type="text" name="fname" class="form-control" required="1" value="Arie">
+            <input type="text" name="fname" class="form-control" required="1" value="{{student.fname}}">
           </div>
 
           <div class="form-group">
             <label>Nama Tengah</t></label>
-            <input type="text" name="mname" class="form-control" required="1" value="Abisha">
+            <input type="text" name="mname" class="form-control" value="{{student.mname}}">
           </div>
 
             <div class="form-group"> 
               <label>Nama Belakang</label>
-              <input type="text" name="lname" class="form-control" required="1" value="Soleh">
+              <input type="text" name="lname" class="form-control" value="{{student.lname}}">
             </div>
 
-            <div class="form-group">
+            <div class="form-group"> 
               <label>Tanggal Lahir</label>
-              <input type="date" name="dob" class="form-control" required="1" value="1990-01-01">
+              <input type="date" name="dob2" class="form-control" value="{{student.dob2}}">
             </div>
-
+          
             <div class="form-group">
-              <button class="btn btn-primary" type="submit">Tambah Murid</button>
+              <button class="btn btn-primary" type="submit">Ubah Data Murid</button>
             </div>  
 
         </form>
