--- a/templates/studentadd.html
+++ b/templates/studentadd.html
@@ -33,12 +33,16 @@
             <label>Laki/Perempuan</label>
             <input type="text" name="sex" class="form-control">
           </div>
-
           
             <div class="form-group">
               <label>Tanggal Lahir</label>
               <input type="date" name="dob" class="form-control">
             </div>
+
+          <div class="form-group"> 
+            <label>Catatan</label>
+            <input type="text" name="notes" class="form-control">
+          </div>
 
             <div class="form-group">
               <button class="btn btn-primary" type="submit">Tambah Murid</button>
