--- a/templates/studentedit.html
+++ b/templates/studentedit.html
@@ -1,4 +1,4 @@
-<div id="studentedit{{student.id}}"" class="modal fade" role="dialog">
+<div id="studentedit{{student.id}}" class="modal fade" role="dialog">
   <div class="modal-dialog">
     <div class="modal-content">
 
@@ -7,7 +7,7 @@
       </div>
 
       <div class="modal-body">
-        <form action="" method="post">
+        <form action="/student/update" method="post">
 
           <div class="form-group">
             <label>ID</label>
@@ -26,7 +26,7 @@
           </div>
 
           <div class="form-group">
-            <label>Nama Tengah</t></label>
+            <label>Nama Tengah</label>
             <input type="text" name="mname" class="form-control" value="{{student.mname}}">
           </div>
 
@@ -35,21 +35,31 @@
               <input type="text" name="lname" class="form-control" value="{{student.lname}}">
             </div>
 
+          <div class="form-group"> 
+            <label>Laki/Perempuan</label>
+            <input type="text" name="sex" class="form-control" value="{{student.sex}}">
+
             <div class="form-group"> 
               <label>Tanggal Lahir</label>
               <input type="date" name="dob2" class="form-control" value="{{student.dob2}}">
             </div>
-          
+
+            <div class="form-group"> 
+              <label>Catatan</label>
+              <input type="text" name="notes" class="form-control" value="{{student.notes}}">
+            <br>
+            
             <div class="form-group">
               <button class="btn btn-primary" type="submit">Ubah Data Murid</button>
+              &nbsp;|&nbsp;
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+
             </div>  
 
+              
         </form>
       </div>
 
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-      </div>
 
     </div>
   </div>
