--- a/templates/studentlist.html
+++ b/templates/studentlist.html
@@ -10,10 +10,32 @@
   <td>{{student.sex}}</td>
   <td>{{student.dob}}</td>
   <td>
-    <a href="/update/{{student.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#studentedit{{student.id}}">{{student['id']}} Ubah data</a>
-    <a href="" class="btn btn-danger btn-xs" onclick="return confirm('Apakah anda yakin ingin menghapus data ini?')">Hapus data</a>
+    <!--
+    <a href="update/{{student.id}}" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#studentedit{{student.id}}">{{student['id']}} Ubah data</a>
+    -->
+    <a href="" class="btn btn-warning btn-xs" data-toggle="modal" data-target="#studentedit{{student.id}}">{{student['id']}} Ubah data</a>
+
+    <a href="" class="btn btn-danger btn-xs" data-toggle="modal" data-target="#studentdelete{{student.id}}">{{student['id']}} Hapus data</a>
+
+    <!--
+
+    <button type="button" class="btn btn-success float-right" data-toggle="modal" data-target="#studentdelete{{student.id}}" data-show="true">Hapus data murid {{student['id']}}</button>
+    
+    <form action="/student/delete" method="post">
+      <input type="hidden" name= "id{{student.id}}" value="{{student.id}}">
+
+    -->
+
+
+
+    
+<!--
+    </form>
+-->
+
   </td>
+   {% include 'studentedit.html' %}
 </tr>
 <!--edit student-->
 
- {% include 'studentedit.html' %}
+ {% include 'studentdelete.html' %}
