readonly id inputs removed from delete & update forms. minor changes

--- a/templates/studentlist.html
+++ b/templates/studentlist.html
@@ -34,8 +34,9 @@
 -->
 
   </td>
+  <!--edit student-->
    {% include 'studentedit.html' %}
 </tr>
-<!--edit student-->
+<!--delete student-->
 
  {% include 'studentdelete.html' %}
