--- a/templates/studentdelete.html
+++ b/templates/studentdelete.html
@@ -3,7 +3,7 @@
     <div class="modal-content">
 
       <div class="modal-header">
-        <h4 class="modal-title">Hapus Data Murid</h4>
+        <h4 class="modal-title">Konfirmasi Hapus Data Murid</h4>
       </div>
 
       <div class="modal-body">
@@ -11,10 +11,6 @@
 
           <input type="hidden" name= "id" value="{{student.id}}">
           
-          <div class="form-group">
-            <label>ID {{student.id}}</label>
-          </div>
-
           <div class="form-group">
             <label>Kode Murid: {{student.stdid}}</label>
           </div>
