--- a/templates/studentadd.html
+++ b/templates/studentadd.html
@@ -24,29 +24,34 @@
             <input type="text" name="mname" class="form-control">
           </div>
 
-            <div class="form-group"> 
-              <label>Nama Belakang</label>
-              <input type="text" name="lname" class="form-control">
-            </div>
+          <div class="form-group"> 
+            <label>Nama Belakang</label>
+            <input type="text" name="lname" class="form-control">
+          </div>
 
           <div class="form-group"> 
             <label>Laki/Perempuan</label>
-            <input type="text" name="sex" class="form-control">
-          </div>
-          
-            <div class="form-group">
-              <label>Tanggal Lahir</label>
-              <input type="date" name="dob" class="form-control">
-            </div>
 
-          <div class="form-group"> 
+            <select name="sex" class="form-control">
+              <option value=""></option>
+              <option value="Laki">Laki</option>
+              <option value="Perempuan">Perempuan</option>
+            </select>          
+          </div> 
+          
+          <div class="form-group">
+            <label>Tanggal Lahir</label>
+            <input type="date" name="dob" class="form-control">
+          </div>
+
+          <div class="overflow-scroll"> 
             <label>Catatan</label>
             <input type="text" name="notes" class="form-control">
           </div>
 
-            <div class="form-group">
+          <div class="form-group">
               <button class="btn btn-primary" type="submit">Tambah Murid</button>
-            </div>  
+          </div>  
 
         </form>
       </div>
