--- a/templates/studentdelete.html
+++ b/templates/studentdelete.html
@@ -12,25 +12,25 @@
           <input type="hidden" name= "id" value="{{student.id}}">
           
           <div class="form-group">
-            <label>Kode Murid: {{student.stdid}}</label>
+            <label>Kode Murid: {{student.studentid}}</label>
           </div>
 
           <div class="form-group">
-            <label>Nama Depan: {{student.fname}}</label>
+            <label>Nama Depan: {{student.studentfname}}</label>
             
           <div class="form-group">
-            <label>Nama Tengah: {{student.mname}}</label>
+            <label>Nama Tengah: {{student.studentmname}}</label>
           </div>
 
             <div class="form-group"> 
-              <label>Nama Belakang: {{student.lname}}</label>
+              <label>Nama Belakang: {{student.studentlname}}</label>
             </div>
 
           <div class="form-group"> 
-            <label>Laki/Perempuan: {{student.sex}}</label>
+            <label>Laki/Perempuan: {{student.studentsex}}</label>
 
             <div class="form-group"> 
-              <label>Tanggal Lahir: {{student.dob2}}</label>
+              <label>Tanggal Lahir: {{student.studentdob2}}</label>
             </div>
 
             <div class="form-group"> 
