--- a/templates/studentadd.html
+++ b/templates/studentadd.html
@@ -7,7 +7,7 @@
       </div>
 
       <div class="modal-body">
-        <form action="/student/apply" method="post">
+        <form action="/student/add" method="post">
 
           <div class="form-group">
             <label>ID</label>
