--- a/templates/bootstrap.html
+++ b/templates/bootstrap.html
@@ -1,4 +1,69 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
-<link href="/static/css/bootstrap.min.css" rel="stylesheet" type="text/css">
+<style>
+body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+.top-container {
+  background-color: #f1f1f1;
+  padding: 30px;
+  text-align: center;
+}
+
+.header {
+  padding: 10px 16px;
+  background: #222222;
+  color: #f1f1f1;
+}
+
+.content {
+  padding: 16px;
+}
+
+.sticky {
+  position: fixed;
+  top: 0;
+  width: 100%;
+}
+
+.sticky + .content {
+  padding-top: 102px;
+}
+</style>
+
+<link href="/static/jquery/bootstrap341.min.css" rel="stylesheet" type="text/css">
+<script src="/static/jquery/jquery.min.js"></script>
+<script src="/static/jquery/bootstrap341.min.js"></script>
+<style>
+  .jumbotron {
+    background-color: #f4511e;
+    color: #fff;
+  }
+  .navbar {
+    margin-bottom: 0;
+    background-color: #f4511e;
+    z-index: 9999;
+    border: 0;
+    font-size: 12px !important;
+    line-height: 1.42857143 !important;
+    letter-spacing: 4px;
+    border-radius: 0;
+  }
+
+  .navbar li a, .navbar .navbar-brand {
+    color: #000 !important;
+  }
+
+  .navbar-nav li a:hover, .navbar-nav li.active a {
+    color: #fff !important;
+    background-color: #f4511e !important;
+  }
+
+  .navbar-default .navbar-toggle {
+    border-color: transparent;
+    color: #f4511e !important;
+  }
+  </style>
