--- a/templates/footer.html
+++ b/templates/footer.html
@@ -1,3 +1,5 @@
+
+
 <div class="b-example-divider"></div>
 
 <div class="container">
@@ -12,3 +14,18 @@
     <p class="text-center text-body-secondary">Copyright 2024, Saibas</p>
   </footer>
 </div>
+
+<script>
+  window.onscroll = function() {myFunction()};
+
+  var header = document.getElementById("myHeader");
+  var sticky = header.offsetTop;
+
+  function myFunction() {
+    if (window.pageYOffset > sticky) {
+      header.classList.add("sticky");
+    } else {
+      header.classList.remove("sticky");
+    }
+  }
+</script>
