render_template static page name (html) replaced by dynamic variable / db menutitle.  load_active_menu for nav topmenu added.

--- a/templates/navbar.html
+++ b/templates/navbar.html
@@ -12,9 +12,9 @@
       <ul class="nav navbar-nav navbar-right">
 
         {% for menu in menus %}
-          <li><a href="{{menu.menupage}}">
+          <li><a href="{{menu.menupy}}">
           {% if menu.menuid2 == 0 %}
-            <li><a href="{{menu.menupage}}">{{menu.menutitle}}</a></li>
+            <li><a href="{{menu.menupy}}">{{menu.menutitle}}</a></li>
           {% endif %}
 
           {% if menu.menuid2 == 1 %}
